# Krona-Lite

./: LICENSE  README.md  package.json  pnpm-lock.yaml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src/lib/: TodoItem.svelte  stores.ts
src/routes/: +layout.svelte  +page.svelte
src/tauri/src/: main.rs
